# camo_extract

./: .gitignore  COMPLETE_PACKAGE.md  PROMPT_GUIDE.md  README.md  README.pdf_extractor.md  TEST_MODE.md  causal_mosaic_v0.7.1.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_quick.py
config/: examples.yaml  llm_settings.yaml  prompts.yaml
data/input/: sample_articles.ris
facets_test/: causal_graph.json  causal_graph.yaml  ontology_gaps.csv  ontology_gaps.yaml  processing_manifest.json
facets_test_0704/: causal_graph.json  causal_graph.yaml  ontology_gaps.csv  ontology_gaps.yaml  processing_manifest.json
facets_test_0704/failed/: graph_EDN3IQD5.json
facets_test_0704/partial/: gaps_2F76GVEE.json  gaps_2NTC7MPT.json  gaps_2RDYT7AN.json  gaps_2UCS49MR.json  gaps_38UL8WR6.json  gaps_3I3RIZGT.json  gaps_3KPITIV3.json  gaps_3Q6ULZV2.json  gaps_3QP86CD2.json  gaps_3R2RLUWA.json  gaps_3TSUKL7G.json  gaps_3YNFB29I.json  gaps_4AIQ79PJ.json  gaps_4BN3ULB8.json  gaps_4C479SU8.json  gaps_4CB9X9XE.json  gaps_4EHWQUGV.json  gaps_4EUSU937.json  gaps_4HX8XJ7S.json  gaps_4N8JQ5C9.json  gaps_4PQUIXZ8.json  gaps_4RFTRJCP.json  gaps_4VEKM72D.json  gaps_52A96ZH4.json  gaps_52KEMA6X.json  gaps_52UCJ3MT.json  gaps_53I846N2.json  gaps_55MCQCEF.json  gaps_5E5QP689.json  gaps_5GDL2NII.json  gaps_5PA9W896.json  gaps_5QEPNFKI.json  gaps_65X7UUNQ.json  gaps_6DBK8P4E.json  gaps_6DHF2A4E.json  gaps_6GZ47GVW.json  gaps_6HG75N67.json  gaps_6HKWT4QG.json  gaps_6SFKXDIH.json  gaps_6W42BAVP.json  (+499 more)
facets_test_0705_20260705_162747_66087b13/: causal_graph.yaml  ontology_gaps.csv  ontology_gaps.yaml  processing_manifest.json
ontology_agent/: CONFIG_FEATURES.md  README.md  config.yaml  pyproject.toml  sample_config.yaml
ontology_agent/ontology_agent/: __init__.py  cli.py  config.py  models.py
ontology_agent/ontology_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ontology_agent/ontology_agent/services/: __init__.py  bioportal.py  custom_ontology.py  generator.py  ols.py
ontology_agent/tests/: __init__.py  test_agent.py  test_api_clients.py  test_generator.py  test_imports.py  test_package.py
src/: __init__.py  chunker.py  config.py  consolidator.py  gap_report.py  graph_extractor.py  main.py  ontology_grounder.py  pdf_processor.py  risc_reader.py  schema_validation.py  validator.py
tests/: test_ingestion_and_grounding.py  test_live_ontology_integrations.py  test_pdf_processor.py  test_schema_pipeline.py
(+855 files in other folders)
