[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ontology-agent"
version = "0.1.0"
description = "Standalone ontology lookup agent with term suggestion capabilities"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Tim Alamenciak", email = "tim.alamenciak@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "tenacity>=8.0",
    "pyyaml>=6.0",
    "rdflib>=6.0",
]

[project.scripts]
ontology-agent = "ontology_agent.cli:main"

[project.urls]
Homepage = "https://github.com/anomalyco/camo_extract"
Issues = "https://github.com/anomalyco/camo_extract/issues"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
